# HasLearned

./: .gitignore  ChangeLog.md  haslearned.cabal  school.cabal  test.idx
.stack-work/install/x86_64-linux/lts-9.13/8.0.2/doc/haslearned-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-9.13/8.0.2/lib/x86_64-linux-ghc-8.0.2/haslearned-0.1.0.0-1MYfuCwSlxlBXzMx3VqeuN/HML/: Aux.hi
.stack-work/install/x86_64-linux/lts-9.13/8.0.2/lib/x86_64-linux-ghc-8.0.2/haslearned-0.1.0.0-1MYfuCwSlxlBXzMx3VqeuN/HML/FileIO/: AppIO.dyn_hi  MatrixHeader.dyn_hi  MatrixSink.hi  MatrixSource.dyn_hi
.stack-work/install/x86_64-linux/lts-9.13/8.0.2/lib/x86_64-linux-ghc-8.0.2/haslearned-0.1.0.0-1MYfuCwSlxlBXzMx3VqeuN/HML/Types/: Constants.dyn_hi  PosInt.dyn_hi  TypeName.hi
.stack-work/install/x86_64-linux/lts-9.13/8.0.2/pkgdb/: haslearned-0.1.0.0-1MYfuCwSlxlBXzMx3VqeuN.conf  package.cache
app/benchmark/: CSVToBinary.hs
app/benchmark/data/: digits_fst100.csv  smallCSV.csv
app/tools/: CSVToBinary.hs  CSVToBinary.hs.save  CSVToBinary.hs.save.1  CSVToBinary.hs.save.2  CSVToBinary.hs.save.3
script/: benchmark  build  clean  clearFiles  clearSaveFiles  test
src/HML/: Aux.hs  Aux.hs.save
src/HML/FileIO/: AppIO.hs  CSVReader.hs  CSVReader.hs.save.1  CSVReader.hs.save.2  CSVReader.hs.save.3  CSVReader.hs.save.4  CSVReader.hs.save.5  CSVReader.hs.save.6  CSVReader.hs.save.7  CSVReader.hs.save.8  CSVReader.hs.save.9  MatrixHeader.hs  MatrixSink.hs  MatrixSource.hs
src/HML/Types/: Constants.hs  DataSize.hs.save  DoubleToBinary.hs  Errors.hs  FloatEq.hs  FloatEq.hs.save  PosInt.hs  TypeName.hs
src/HML/Utils/: Constants.hs  Debug.hs  SafeEncoding.hs
src/School/App/: AppIO.hs  AppS.hs  CSVReader.hs  FileHandler.hs  FileTransformer.hs  MultiLayerPerceptron.hs
src/School/Evaluate/: Evaluate.hs
src/School/FileIO/: AppIO.hs  BinConversion.hs  CSVReader.hs  ConduitHeader.hs  Confirmer.hs  DoubleSource.hs  DoubleSourcery.hs  FileApp.hs  FileHeader.hs  FilePath.hs  FileType.hs  IdxSource.hs  IntListSource.hs  MatrixHeader.hs  MatrixSink.hs  MatrixSource.hs  MatrixSourcery.hs  SmSink.hs  SmSource.hs  Source.hs
src/School/Train/: AppTrain.hs  BackwardPass.hs  ForwardPass.hs  GradientDescent.hs  GradientDescentPass.hs  IterationHandler.hs  MultiLayerPerceptron.hs  SimpleDescentUpdate.hs  StateFunctions.hs  StoppingCondition.hs  TrainState.hs  UpdateParams.hs
src/School/Types/: DataType.hs  Decoding.hs  DoubleConversion.hs  DoubleToBinary.hs  Encoding.hs  Error.hs  Errors.hs  FloatEq.hs  LiftResult.hs  PingPong.hs  PosInt.hs  Slinky.hs  Sourcery.hs  TypeName.hs
src/School/Unit/: Affine.hs  ApplyCost.hs  Constituents.hs  CostFunction.hs  CostParams.hs  LogSoftMax.hs  MultiNoulli.hs  RecLin.hs  Unit.hs  UnitActivation.hs  UnitBackward.hs  UnitForward.hs  UnitGradient.hs  UnitParams.hs  WeightDecay.hs
src/School/Utils/: Constants.hs  Debug.hs  Double.hs  Either.hs  FileApp.hs  IO.hs  LinearAlgebra.hs  Maybe.hs  Monad.hs  Random.hs  SafeEncoding.hs  Tuple.hs
test/: Template.hs  Test.hs  Test.hs.save
test/HML/: TestUtils.hs
test/HML/FileIO/Test/: CSVReader.hs  CSVReader.hs.save  CSVReader.hs.save.1  MatrixHeader.hs  MatrixSink.hs  MatrixSource.hs
test/HML/Types/Test/: DoubleToBinary.hs  FloatEq.hs  PosInt.hs  TypeName.hs
test/School/: TestUtils.hs
test/School/App/Test/: CSVReader.hs  FileHandler.hs  FileTransformer.hs
test/School/Evaluate/Test/: Evaluate.hs
test/School/FileIO/Test/: BinConversion.hs  CSVReader.hs  FileHeader.hs  MatrixHeader.hs  MatrixSink.hs  MatrixSource.hs  MatrixSourcery.hs  SmSink.hs  SmSource.hs  Source.hs
test/School/Train/Test/: BackwardPass.hs  ForwardPass.hs  GradientDescent.hs  GradientDescentPass.hs
test/School/Types/Test/: Conversion.hs  DataType.hs  DoubleConversion.hs  DoubleToBinary.hs  FloatEq.hs  PosInt.hs  TypeName.hs
test/School/Unit/Test/: Affine.hs  LogSoftMax.hs  MultiNoulli.hs  RecLin.hs  UnitBackward.hs  UnitForward.hs  WeightDecay.hs
test/data/: matrix3x3.idx  matrix3x3.sm  matrix3x3Twice.idx  matrix3x3Twice.sm  matrix3x3Twice_INT08B.idx  matrix3x3Twice_INT08B.sm  matrix3x3Twice_INT32B.idx  matrix3x3Twice_INT32B.sm  matrix3x3_INT08B.idx  matrix3x3_INT08B.sm  matrix3x3_INT32B.idx  matrix3x3_INT32B.sm  test-labels-20.idx
