name:                school
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jorgen Fulsebakke
maintainer:          jorgen.fulsebakke@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     School.FileIO.AppIO
                     , School.FileIO.CSVReader
                     , School.FileIO.MatrixHeader
                     , School.FileIO.MatrixSink
                     , School.FileIO.MatrixSource
                     , School.Types.DoubleConversion
                     , School.Types.FloatEq
                     , School.Types.TypeName
                     , School.Types.PosInt
                     , School.Unit.Affine
                     , School.Unit.Unit
                     , School.Unit.UnitActivation
                     , School.Unit.UnitParams
                     , School.Unit.UnitGradient
                     , School.Utils.Constants
                     , School.Utils.Debug
                     , School.Utils.LinearAlgebra
                     , School.Utils.SafeEncoding
  other-modules:       School.Types.Errors
  build-depends:       QuickCheck
                     , attoparsec
                     , base >= 4.9
                     , bytestring
                     , bytestring-conversion
                     , cereal
                     , conduit-combinators
                     , conduit-extra
                     , filepath
                     , hmatrix
                     , mtl
                     , text
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  
executable CSVToBinary
  main-is:             CSVToBinary.hs
  hs-source-dirs:      app/tools
  build-depends:       base >=4.9
                     , conduit-combinators
                     , school
                     , optparse-applicative
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite school-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       School.FileIO.Test.CSVReader
                     , School.FileIO.Test.MatrixHeader
                     , School.FileIO.Test.MatrixSink
                     , School.FileIO.Test.MatrixSource
                     , School.TestUtils
                     , School.Types.Test.DoubleConversion
                     , School.Types.Test.FloatEq
                     , School.Types.Test.PosInt
                     , School.Types.Test.TypeName
                     , School.Unit.Test.Affine
  build-depends:       QuickCheck
                     , base >= 4.9
                     , bytestring
                     , bytestring-conversion
                     , cereal
                     , conduit-combinators
                     , directory
                     , school
                     , hmatrix
                     , random
                     , split
                     , tasty
                     , tasty-quickcheck
                     , tasty-th
                     , transformers

benchmark csv-benchmark
  type:                exitcode-stdio-1.0
  main-is:             CSVToBinary.hs
  hs-source-dirs:      app/benchmark
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       QuickCheck
                     , base >= 4.9
                     , criterion
                     , directory
                     , filepath
                     , school
