name:                school
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jorgen Fulsebakke
maintainer:          jorgen.fulsebakke@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     School.App.AppS
                     , School.App.CSVReader
                     , School.App.MultiLayerPerceptron 
                     , School.FileIO.AppIO
                     , School.FileIO.MatrixHeader
                     , School.FileIO.MatrixSink
                     , School.FileIO.MatrixSource
                     , School.Train.AppTrain
                     , School.Train.BackwardPass
                     , School.Train.ForwardPass
                     , School.Train.GradientDescent
                     , School.Train.GradientDescentPass
                     , School.Train.IterationHandler
                     , School.Train.StoppingCondition
                     , School.Train.SimpleDescentUpdate
                     , School.Train.TrainState
                     , School.Train.UpdateParams
                     , School.Types.DoubleConversion
                     , School.Types.FloatEq
                     , School.Types.TypeName
                     , School.Types.PingPong
                     , School.Types.PosInt
                     , School.Types.Slinky
                     , School.Unit.Affine
                     , School.Unit.ApplyCost
                     , School.Unit.CostFunction
                     , School.Unit.CostParams
                     , School.Unit.LogSoftMax
                     , School.Unit.MultiNoulli
                     , School.Unit.RecLin
                     , School.Unit.Unit
                     , School.Unit.UnitActivation
                     , School.Unit.UnitBackward
                     , School.Unit.UnitForward
                     , School.Unit.UnitParams
                     , School.Unit.UnitGradient
                     , School.Unit.WeightDecay
                     , School.Utils.Constants
                     , School.Utils.Debug
                     , School.Utils.Either
                     , School.Utils.LinearAlgebra
                     , School.Utils.Random
                     , School.Utils.SafeEncoding
  other-modules:       School.Types.Errors
  build-depends:       QuickCheck
                     , attoparsec
                     , base >= 4.9
                     , bytestring
                     , bytestring-conversion
                     , cereal
                     , conduit-combinators
                     , conduit-extra
                     , filepath
                     , hmatrix
                     , mtl
                     , random
                     , text
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  
executable CSVToBinary
  main-is:             CSVToBinary.hs
  hs-source-dirs:      app/tools
  build-depends:       base >=4.9
                     , conduit-combinators
                     , school
                     , optparse-applicative
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite school-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       School.App.Test.CSVReader
                     , School.FileIO.Test.MatrixHeader
                     , School.FileIO.Test.MatrixSink
                     , School.FileIO.Test.MatrixSource
                     , School.TestUtils
                     , School.Types.Test.DoubleConversion
                     , School.Types.Test.FloatEq
                     , School.Types.Test.PosInt
                     , School.Types.Test.TypeName
                     , School.Train.Test.BackwardPass
                     , School.Train.Test.ForwardPass
                     , School.Train.Test.GradientDescent
                     , School.Train.Test.GradientDescentPass
                     , School.Unit.Test.Affine
                     , School.Unit.Test.LogSoftMax
                     , School.Unit.Test.MultiNoulli
                     , School.Unit.Test.RecLin
                     , School.Unit.Test.UnitBackward
                     , School.Unit.Test.UnitForward
                     , School.Unit.Test.WeightDecay
  build-depends:       QuickCheck
                     , base >= 4.9
                     , bytestring
                     , bytestring-conversion
                     , cereal
                     , conduit-combinators
                     , directory
                     , school
                     , hmatrix
                     , mtl
                     , random
                     , split
                     , tasty
                     , tasty-quickcheck
                     , tasty-th
                     , transformers

benchmark csv-benchmark
  type:                exitcode-stdio-1.0
  main-is:             CSVToBinary.hs
  hs-source-dirs:      app/benchmark
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       QuickCheck
                     , base >= 4.9
                     , criterion
                     , directory
                     , filepath
                     , school
